@@ -1,6 +1,7 @@
 trunk
 
 o Removed typos in the documentation (thanks to A. Neumann for spotting this!)
+o Fixed CMake to make the install working also on OSx
 
 v0.2.1
 
